			      CHANGES IN markdown VERSION 0.8

MINOR CHANGES

   o the MathJax CDN URL was replaced by http://www.bootcdn.cn/mathjax/

BUG FIXES

   o fixed https://github.com/rstudio/htmltools/issues/30: markdownToHTML() did
   not work with empty files (thanks, @VermillionAzure)

			      CHANGES IN markdown VERSION 0.7.7

BUG FIXES

  o renderMarkdown() works now even if text = character(0) or ""

  o added an `encoding` argument to renderMarkdown() since multi-byte characters
  in renderMarkdown() did not work on Windows (thanks, Kohske Takahashi, #63)

  o fixed #64: invalid 'n' argument in rpubsUpload() (thanks, Wouter van
  Atteveldt)

MAJOR CHANGES

  o if renderMarkdown() returns a character vector, it will be marked with the
  UTF-8 encoding if it contains multi-byte characters

			      CHANGES IN markdown VERSION 0.7.4

NEW FEATURES

  o when an image is the only element of its parent node in the HTML output
  document, it is automatically centered on the page

MINOR CHANGES

  o images that have already been base64 encoded will not be encoded again (#61)

  o the URL of the MathJax CDN was updated to cdn.mathjax.org

			      CHANGES IN markdown VERSION 0.7.2

BUG FIXES

  o fixed #60: MathJax may be included even if it is unnecessary when syntax
  highlighting is enabled (thanks, @aoles)

  o fixed a bug which may hang R when building R Markdown vignettes in a wrong
  locale (thanks, Dan Tenenbaum, yihui/knitr#782)

			      CHANGES IN markdown VERSION 0.7

BUG FIXES

  o if both the 'file' and 'text' arguments are provided but file = NULL,
  e.g. markdownToHTML(file = NULL, text = ?), markdownToHTML() can throw an
  error indicating the file is invalid (thanks, Tyler Rinker,
  hadley/staticdocs#66)

  o markdownToHTML(text = ?, output = ?) was broken (#54)

			      CHANGES IN markdown VERSION 0.6.5

NEW FEATURES

  o added an argument 'encoding' to markdownToHTML() to specify the