@@ -1,11 +1,11 @@
-6c409ef8e37e0936e6df3ac8931940ff *DESCRIPTION
+d4cd5415082d00d2e659debad6d7e027 *DESCRIPTION
 0138c297e1c17cef31fd4275e5d2058f *NAMESPACE
-8bebd8e5cef0eaa470d5a86387286b08 *NEWS
+3b284d048686a9461c3ec8bddaf189bf *NEWS
 0a375621b5466aaa55827331b7a54aba *R/markdown-package.R
 4c0c2582a89ace3512ccd0b7d077e6d1 *R/renderMarkdown.R
 9c15b355037cc2e11df80d660e0e6e3f *R/rpubsUpload.R
-8d8e54509fc3fe29397a945c23015784 *README.md
-a4565ca643b20915c2c92c21f6f674e9 *build/vignette.rds
+3099e0177c35e1f1ba36cb1ed7f0b6ce *README.md
+8a112c8a8be4fca7a96f5a926e56bcec *build/vignette.rds
 603dd5a44125bb3c7f2595c87c048d93 *inst/COPYING
 4907458964894cb1dcc67c4f5690a48b *inst/NOTICE
 5f8881b49f2c520da450f8705916e906 *inst/doc/markdown-examples.R
@@ -39,9 +39,9 @@ f171794e13c464eefc8cff95e088ee80 *man/smartypants.Rd
 6ef3854b1cc4f5b7122638960ffe8591 *src/Rinit.c
 2ea7823363be5db032986e8bb22d2f73 *src/Rmarkdown.c
 be6889a7e0acbbc26cebd8b379efae40 *src/Rmarkdown.h
-26fcef5aabe22c64142adb48c2a87cf5 *src/autolink.c
+822e237bab43339ad59c757a967ee14d *src/autolink.c
 4ba2610d0919031a909bf50306bfc533 *src/autolink.h
-51bbdc8afb4d77aa10e71e48fa67bd76 *src/buffer.c
+b95e56dcf457ac6179e298f2a1287eeb *src/buffer.c
 468151555424b7d222a1a64d0cbc7a69 *src/buffer.h
 6cc1bd118177be4dac56e0e7698470f1 *src/houdini.h
 327ac86078b740183d9484bf9b65b719 *src/houdini_href_e.c
@@ -55,9 +55,9 @@ d7c1cac650658c15073aeeecf8117cac *src/markdown.c
 0ac4251d8cb2f229de24efbe501f2a4a *src/stack.c
 cd51442c3d728d42342e57467dcd5ad5 *src/stack.h
 ecd33756b1689d8da494c69bea7a7ca6 *src/sundown_version.h
-db1aa5d45dbadf89ef24ddec5b4f35ff *tests/b64EncodeFile.R
+15804ae82bfffbf31a3dd7006918df3f *tests/b64EncodeFile.R
 1f82a1dc0ed1faf6cfe247d37ad78638 *tests/empty.R
 44ebcfa56c4b699099a0b74fd32474f7 *tests/tests.R
-7f1dec0d46dcf4e910dc1b0d3f8119ca *tests/tests.Rout.save
+f6e6fab5f44cd7d177e7281f198a61c5 *tests/tests.Rout.save
 29668370a07ca593fad4e953674716cc *vignettes/markdown-examples.Rmd
 09998ddcbdaa092c32cfedd3d12e11a2 *vignettes/markdown-output.Rmd
