@@ -4,10 +4,12 @@ library(markdown)
 url = "https://www.r-project.org/Rlogo.png"
 path = tempdir()
 pathname = file.path(tempdir(), basename(url))
-if (!file_test("-f", pathname)) download.file(url, pathname)
+if (!file_test("-f", pathname)) try(download.file(url, pathname))
 
-## Encode
-data = markdown:::.b64EncodeFile(pathname)
-str(data)
+if (file.exists(pathname)) {
+  ## Encode
+  data = markdown:::.b64EncodeFile(pathname)
+  str(data)
 
-unlink(pathname)
+  unlink(pathname)
+}
