@@ -1,3 +1,9 @@
+			      CHANGES IN markdown VERSION 0.9
+
+BUG FIXES
+
+   o Fixed clang-UBSAN and valgrind issues (thanks, @yixuan, #92).
+
 			      CHANGES IN markdown VERSION 0.8
 
 MINOR CHANGES
